syntax = "proto3";

option go_package = "pkg/proto";

message SummonerRecord {
    string summoner_name = 1;
    int64 summoner_level = 2;
    int32 profile_icon_id = 3;
}

message LeagueRecord {
    string summoner_name = 1;
    string tier = 2;
    string rank = 3;
    int32 lp = 4;
    int32 wins = 5;
    int32 losses = 6;
}

message MatchRecord {}

message GetSummonerRequest { string puuid = 1; }
message GetSummonerResponse {
    SummonerRecord summoner = 1;
}

message UpdateAndGetSummonerRequest { string puuid = 1; }
message UpdateAndGetSummonerResponse {
    SummonerRecord summoner = 1;
}

message GetRankRequest { string puuid = 1; }
message GetRankResponse {
    LeagueRecord rank = 1;
}

message UpdateAndGetRankRequest { string puuid = 1; }
message UpdateAndGetRankResponse {
    LeagueRecord rank = 1;
}

message GetMatchlistRequest { string puuid = 1; }
message GetMatchlistResponse {
    repeated MatchRecord matches = 1;
}

message UpdateAndGetMatchlistRequest { string puuid = 1; }
message UpdateAndGetMatchlistResponse {
    repeated MatchRecord matches = 1;
}

service SummonerProfile {
    rpc GetSummoner(GetSummonerRequest) returns (GetSummonerResponse) {}
    rpc UpdateAndGetSummoner(UpdateAndGetSummonerRequest) returns (UpdateAndGetSummonerResponse) {}

    rpc GetRank(GetRankRequest) returns (GetRankResponse) {}
    rpc UpdateAndGetRank(UpdateAndGetRankRequest) returns (UpdateAndGetRankResponse) {}

    rpc GetMatchlist(GetMatchlistRequest) returns (GetMatchlistResponse) {}
    rpc UpdateAndGetMatchlist(UpdateAndGetMatchlistRequest) returns (UpdateAndGetMatchlistResponse) {}
}
